--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "antd": "^5.9.1",
     "google-map-react": "^2.2.1",
     "next": "13.4.19",
+    "nextjs-progressbar": "^0.0.16",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-leaflet": "^4.2.1",
