--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "nextjs-progressbar": "^0.0.16",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.11.0",
     "react-leaflet": "^4.2.1",
     "swiper": "^10.2.0"
   }
